fix : user can register

--- a/RemSlyApi/appsettings.json
+++ b/RemSlyApi/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(localdb)\\remslydb;Integrated Security=True"
+  },
+  "AppSettings": {
+    "SecretKey": "Remsly SecretKey Api !",
+    "ValidAudience": "Remsly",
+    "ValidIssuer": "https://localhost:7069/swagger/index.html" // adresse de l'API
   }
 }
